# other

asm_avx_fibonacci/: avx_fibonacci.asm  makefile
asm_cpu_name/: cpu_name.asm  makefile
asm_fibonacci/: fibonacci.asm  makefile
asm_ghoul/: ghoul.asm  makefile
asm_pyramid/: makefile  pyramid.asm
asm_vec_pow/: makefile  vec_pow.asm
c_asm_factorial/: makefile
c_asm_factorial/src/: factorial.asm  main.c
c_lua/: CMakeLists.txt
c_lua/resources/: script.lua
c_lua/src/: main.c
c_py/: CMakeLists.txt
c_py/resources/: script.py
c_py/src/: main.c
c_qsort/: makefile
c_qsort/src/: main.c
